--- a/requirements.txt
+++ b/requirements.txt
@@ -8,26 +8,37 @@ blinker==1.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
+Deprecated==1.2.18
 ecdsa==0.19.1
 Flask==3.1.1
+Flask-Limiter==3.12
+Flask-WTF==1.2.2
 frozenlist==1.6.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+limits==5.4.0
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 multidict==6.4.4
 ollama==0.5.1
+ordered-set==4.1.0
+packaging==25.0
 propcache==0.3.1
 py-cord==2.6.1
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
 python-dotenv==1.0.0
 python-http-client==3.3.7
 pytz==2025.2
 requests==2.31.0
+rich==13.9.4
 sendgrid==6.12.2
 six==1.17.0
 sniffio==1.3.1
@@ -35,4 +46,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.4.0
 Werkzeug==3.1.3
+wrapt==1.17.2
+WTForms==3.2.1
 yarl==1.20.0
