update a lot of discord related stuff

--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,11 @@ DISCORD_BOT_TOKEN=your-discord-bot-token
 DISCORD_GUILD_ID=your-discord-server-id
 
 # Email Notifications (Optional)
-# Get API key from: https://sendgrid.com/
-SENDGRID_API_KEY=your-sendgrid-api-key
+# AWS SES SMTP Configuration
+MAIL_HOST=email-smtp.us-west-1.amazonaws.com
+MAIL_PORT=587
+MAIL_USERNAME=your-aws-ses-smtp-username
+MAIL_PASSWORD=your-aws-ses-smtp-password
 
 # =============================================================================
 # PRODUCTION SETTINGS
