made big changes to discord bot

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,12 @@ MAIL_PORT=587
 MAIL_USERNAME=your-aws-ses-smtp-username
 MAIL_PASSWORD=your-aws-ses-smtp-password
 
+# Analytics (Optional)
+# PostHog Configuration - Get from: https://posthog.com/
+POSTHOG_API_KEY=phc_your-posthog-api-key
+POSTHOG_HOST=https://us.i.posthog.com
+POSTHOG_ENABLED=true
+
 # =============================================================================
 # PRODUCTION SETTINGS
 # =============================================================================
