add unsubscribe to the deletion part and fix DOB inconsistency throuhgout the app

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,12 @@ POSTHOG_API_KEY=phc_your-posthog-api-key
 POSTHOG_HOST=https://us.i.posthog.com
 POSTHOG_ENABLED=true
 
+# Mailing List (Optional)
+# Listmonk Configuration - Self-hosted newsletter/mailing list manager
+LISTMONK_URL=https://mail.hack.sv
+LISTMONK_API_KEY=your-listmonk-admin-api-key
+LISTMONK_ENABLED=true
+
 # =============================================================================
 # PRODUCTION SETTINGS
 # =============================================================================
