--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,26 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
+aiohttp==3.12.15
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
 blinker==1.9.0
+boolean.py==5.0
+CacheControl==0.14.3
 cachelib==0.13.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
+cyclonedx-python-lib==9.1.0
+defusedxml==0.7.1
 Deprecated==1.2.18
-ecdsa==0.19.1
+filelock==3.19.1
 Flask==3.1.1
 Flask-Limiter==3.12
 Flask-Session==0.8.0
 Flask-WTF==1.2.2
 frozenlist==1.6.0
+git-filter-repo==2.47.0
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
@@ -23,31 +28,40 @@ httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+license-expression==30.4.4
 limits==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+msgpack==1.1.1
 msgspec==0.19.0
 multidict==6.4.4
 ollama==0.5.1
 ordered-set==4.1.0
+packageurl-python==0.17.5
 packaging==25.0
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.9.0
+pipdeptree==2.28.0
+platformdirs==4.3.8
 propcache==0.3.1
 py-cord==2.6.1
+py-serializable==2.1.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+pyparsing==3.2.3
 python-dotenv==1.0.0
-
 pytz==2025.2
-requests==2.31.0
+requests==2.32.5
 rich==13.9.4
-
-six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+toml==0.10.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
-urllib3==2.4.0
+urllib3==2.5.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 WTForms==3.2.1
