--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ boolean.py==5.0
 CacheControl==0.14.3
 cachelib==0.13.0
 certifi==2025.4.26
+cffi==2.0.0
 charset-normalizer==3.4.2
 click==8.2.1
+cryptography==46.0.3
 cyclonedx-python-lib==9.1.0
 defusedxml==0.7.1
 Deprecated==1.2.18
@@ -48,9 +50,11 @@ platformdirs==4.3.8
 propcache==0.3.1
 py-cord==2.6.1
 py-serializable==2.1.0
+pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
 pyparsing==3.2.3
 python-dotenv==1.0.0
 pytz==2025.2
@@ -63,6 +67,7 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.5.0
 Werkzeug==3.1.3
+workos==5.32.0
 wrapt==1.17.2
 WTForms==3.2.1
 yarl==1.20.0
